add new page initiatives

--- a/blog.html
+++ b/blog.html
@@ -200,16 +200,52 @@
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
                     <div class="blog-item bg-light rounded overflow-hidden">
                         <div class="blog-img position-relative overflow-hidden">
-                            <img class="img-fluid" src="img/images/ehtfalat/4adde165-815b-446c-8cdb-6de47ffe2ee8.jpg" alt="">
-                           <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
+                            <img class="img-fluid" src="img/images/news/hospital.jpeg" alt="">
+                            <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
                         </div>
                         <div class="p-4">
                             <div class="d-flex mb-3">
                                 <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسؤال الاول </small>
                                 <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2045 </small>
                             </div>
-                            <h4 class="mb-3">How to build a website</h4>
-                            <p>Dolor et eos labore stet justo sed est sed sed sed dolor stet amet</p>
+                            <h4 class="mb-3"> مشروع إنشاء مجمع طبي متكامل لخدمة المواطنين </h4>
+                            <p>
+                                في خطوة نوعية تهدف إلى دعم الرعاية الصحية وتقديم الخدمات الطبية لشرائح المجتمع الأكثر احتياجاً، تُعلن
+                                جمعية مهندسي
+                                البترول والتعدين والغاز عن النظر فى انشاء مشروع مجمع طبي متكامل. يأتي هذا المشروع كجزء من التزام الجمعية
+                                بمسؤوليتها
+                                المجتمعية وتعزيز جودة الحياة للفئات محدوده الدخل,بمسؤوليتها المجتمعية وتعزيز جودة الحياة للفئات محدوده
+                                الدخل
+                                الخدمات الطبية المتاحة:
+                                يهدف المجمع الطبي إلى تقديم مجموعة متكاملة من الخدمات الطبية المتخصصة، تشمل:
+                                العظام / الباطنة / الأطفال / المخ والأعصاب / الجلدية / خدمات الأسنان / التحاليل الطبية
+                            </p>
+                            <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
+                    <div class="blog-item bg-light rounded overflow-hidden">
+                        <div class="blog-img position-relative overflow-hidden">
+                            <img class="img-fluid" src="img/images/Projects/2024-638553628873905114-390.jpeg" alt="">
+                            <!--  <a class="position-absolute top-0 start-0 bg-primary text-white rounded-end mt-5 py-2 px-4" href="">Web Design</a> -->
+                        </div>
+                        <div class="p-4">
+                            <div class="d-flex mb-3">
+                                <small class="me-3"><i class="far fa-user text-primary me-2"></i> المسؤال الاول </small>
+                                <small><i class="far fa-calendar-alt text-primary me-2"></i> 01 Jan, 2045 </small>
+                            </div>
+                            <h4 class="mb-3"> مشروع مدينة الخير لجمعية مهندسى البترول والتعدين والغاز (SPE) </h4>
+                            <p>
+                                إن رسالة الجامعية تدور حول تطبيق وتحقيق المعني الشامل لحقوق الإنسان على أرض الواقع، والذي لا يتمثل فقط في تأمين حيات
+                                كريمة له في أرض وطنه أينما حل، بل أيضاً في تأمين وضعه كفرد منتج نافع لمجتمعه في كل وقت وضمان إعادته سريعاً الى المسار
+                                القويم حال انحرافه عنه
+                                التعريف بالمشروع، واسباب نشأة فكرته:
+                                من هذا المنطق تبنت الجمعية فكرة إنشاء مشروع إنتاجي شامل، يغلب التوظيف فيه على مستوى التشغيل للمواطنين المفرج عنهم بعد
+                                قضاء فترات العقوبات المحكوم عليهم بها في القضايا المختلفة.
+
+                            </p>
                             <a class="text-uppercase" href=""> أقراء المزيد <i class="bi bi-arrow-left"></i></a>
                         </div>
                     </div>
