--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0" style="position: absolute; right: 365px;">
                     <a href="index.html" class="nav-item nav-link active">الرئيسية</a>
-                    <a href="#" class="nav-item nav-link">الداعمين للجمعية</a>
+                       <!-- <a href="#" class="nav-item nav-link">الداعمين للجمعية</a> -->
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">الانشطة</a>
                         <div class="dropdown-menu m-0">
-                            <a href="#" class="dropdown-item">المؤتمرات</a>
+                            <!-- <a href="#" class="dropdown-item">المؤتمرات</a> -->
                             <a href="celebrations.html" class="dropdown-item">الاحتفالات</a>
-                            <a href="#" class="dropdown-item">الندوات</a>
+                            <!-- <a href="#" class="dropdown-item">الندوات</a> -->
                         </div>
                     </div>
                     <div class="nav-item dropdown">
@@ -98,7 +98,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المساعدات</a>
                         <div class="dropdown-menu m-0">
                             <a href="Projects.html" class="dropdown-item"> المشروعات</a>
-                            <a href="#" class="dropdown-item">المبادرات</a>
+                            <a href="initiatives.html" class="dropdown-item">المبادرات</a>
                         </div>
                     </div>
                     <a href="Donate.html" class="nav-item nav-link"> تبرع الان</a>
@@ -151,7 +151,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="w-100" src="img/images/0d6dd90d-adbe-45e7-945b-9a284bc81ff2.jpg" alt="Image">
+                    <img class="w-100" src="img/images/news/472951345_122115167918690116_7875804610822819039_n.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -193,7 +193,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img class="w-100" src="img/images/b82b7a5b-68e0-4c9f-8c41-de0791031aaf.jpg" alt="Image">
+                    <img class="w-100" src="img/images/img_2.jpg" alt="Image">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="row justify-content-center">
@@ -306,7 +306,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 py-3 portfolio-item second wow zoomIn" data-wow-delay="0.3s">
+               <!--  <div class="col-lg-4 col-md-6 py-3 portfolio-item second wow zoomIn" data-wow-delay="0.3s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/3-3.png.webp" alt="">
                         <div class="portfolio-overlay">
@@ -317,7 +317,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-lg-4 col-md-6 py-3 portfolio-item first wow zoomIn" data-wow-delay="0.6s">
                     <div class="position-relative rounded overflow-hidden">
@@ -332,7 +332,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 py-3 portfolio-item second wow zoomIn" data-wow-delay="0.1s">
+                <!-- <div class="col-lg-4 col-md-6 py-3 portfolio-item second wow zoomIn" data-wow-delay="0.1s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/shefaa.jpeg" alt="">
                         <div class="portfolio-overlay">
@@ -343,9 +343,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 col-md-6 py-3 portfolio-item first wow zoomIn" data-wow-delay="0.3s">
+               <!--  <div class="col-lg-4 col-md-6 py-3 portfolio-item first wow zoomIn" data-wow-delay="0.3s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Initiatives/2-6.png" alt="">
                         <div class="portfolio-overlay">
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-lg-4 col-md-6 py-3 portfolio-item second wow zoomIn" data-wow-delay="0.6s">
                     <div class="position-relative rounded overflow-hidden">
@@ -465,7 +465,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
@@ -503,7 +504,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
+
             </div>
         </div>
     </div>
