--- a/initiatives.html
+++ b/initiatives.html
@@ -98,7 +98,7 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المساعدات</a>
                         <div class="dropdown-menu m-0">
                             <a href="Projects.html" class="dropdown-item"> المشروعات</a>
-                            <a href="#" class="dropdown-item">المبادرات</a>
+                            <a href="initiatives.html" class="dropdown-item">المبادرات</a>
                         </div>
                     </div>
                     <a href="Donate.html" class="nav-item nav-link"> تبرع الان</a>
@@ -129,12 +129,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header-madinat mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-blue animated slideInDown mb-4"> المشروعات </h1>
+            <h1 class="display-4 text-blue animated slideInDown mb-4"> المبادرات </h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item text-primary active" aria-current="page"> مدينة الخير </li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">  المبادرات </li>
                     <li class="breadcrumb-item"><a class="text-blue" href="#">حالات تحتاج إلى مشاركتك بالمال</a></li>
-                    <li class="breadcrumb-item"><a class="text-blue" href="#">مشروعات</a></li>
+                    <li class="breadcrumb-item"><a class="text-blue" href="#">المبادرات</a></li>
                 </ol>
             </nav>
         </div>
@@ -145,10 +145,12 @@
     <div class="container-xxl bg-light my-5 py-5">
         <div class="container py-5">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">أنشطة جمعية مهندسى البترول
+                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">أنشطة جمعية مهندسى
+                    البترول
                     والتعدين والغاز</div>
                 <h4 class="mb-5">
-                    حالات تحتاج إلى مشاركتك بالمال (صدقات أو زكاة) كما يمكنك أيضًا التبرع بالمساعدة لأحد الحالات أو أكثر من
+                    حالات تحتاج إلى مشاركتك بالمال (صدقات أو زكاة) كما يمكنك أيضًا التبرع بالمساعدة لأحد الحالات أو أكثر
+                    من
                     حالة.
                 </h4>
             </div>
@@ -158,19 +160,19 @@
                         class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
                             <div class="d-inline-block bg-primary text-white rounded-bottom fs-5 pb-1 px-3 mb-4">
-                                <small> مشروع مدينة الخير</small>
+                                <small> مبادره كرتونة الخير</small>
                             </div>
                             <h5 class="mb-3" style="
                                                 background-color: #ededed;
                                                 margin: 0px;
                                                 padding: 10px;
                                                 border-radius: 9px;">
-                                مشروع إنشاء مجمعات صناعية تشمل العديد من المجالات الحرفية
+                                كرتونة الخير  
                             </h5>
                             <p></p>
                             <div class="causes-progress bg-light p-3 pt-2">
                                 <div class="d-flex justify-content-between">
-                                    <p class="text-dark">£1,000,000 <small class="text-body">الهدف</small></p>
+                                    <p class="text-dark">£100,000 <small class="text-body">الهدف</small></p>
                                     <p class="text-dark">£0 <small class="text-body">تم توفير</small></p>
                                 </div>
                                 <div class="progress">
@@ -182,7 +184,7 @@
                             </div>
                         </div>
                         <div class="position-relative mt-auto">
-                            <img class="img-fluid" src="img/images/activte/2024-638553628873905114-390.jpeg" alt="">
+                            <img class="img-fluid" src="img/images/blog/9073b9f9-4b95-438b-9f63-53857c93e7aa.jpg" alt="">
                             <div class="causes-overlay">
                                 <a class="btn btn-outline-primary" href="madinat-alkhayr.html">
                                     أقراء المزيد
@@ -195,7 +197,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+              <!--   <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div
                         class="causes-item d-flex flex-column bg-white border-top border-5 border-primary rounded-top overflow-hidden h-100">
                         <div class="text-center p-4 pt-0">
@@ -209,7 +211,7 @@
                                                             border-radius: 9px;">
                                 انشاء مشروع إنشاء مجمع طبي متكامل لخدمة المواطنين
                             </h5>
-                
+
                             <div class="causes-progress bg-light p-3 pt-2">
                                 <div class="d-flex justify-content-between">
                                     <p class="text-dark">£ 1,000,000 <small class="text-body">الهدف</small></p>
@@ -235,7 +237,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div
@@ -278,95 +280,98 @@
                         </div>
                     </div>
                 </div> -->
-                
+
             </div>
         </div>
     </div>
     <!-- Causes End -->
 
 
-<!-- Footer Start -->
-<div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
-    <div class="container py-5">
-        <div class="row g-5">
-            <div class="col-lg-3 col-md-6">
-                <h3 class="fw-bold text-primary"> جمعية مهندسى <span class="text-white"> البترول والتعدين والغاز </span>
-                </h3>
-                <p>
-                    بتبنى مشروعات تطوير وتجديد مبانى المدارس الحكومية في المناطق الأكثر احتياجاً في كافة أنحاء الجمهورية
-                    والعمل على رفع
-                    كفاءة البيئة
-                </p>
-                <div class="d-flex pt-2">
-                    <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-square me-1" href="https://www.facebook.com/profile.php?id=61570703487102"
-                        target="_blank"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square me-1" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-square me-1" href=""><i class="fab fa-linkedin-in"></i></a>
+    <!-- Footer Start -->
+    <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h3 class="fw-bold text-primary"> جمعية مهندسى <span class="text-white"> البترول والتعدين والغاز
+                        </span>
+                    </h3>
+                    <p>
+                        بتبنى مشروعات تطوير وتجديد مبانى المدارس الحكومية في المناطق الأكثر احتياجاً في كافة أنحاء
+                        الجمهورية
+                        والعمل على رفع
+                        كفاءة البيئة
+                    </p>
+                    <div class="d-flex pt-2">
+                        <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square me-1" href="https://www.facebook.com/profile.php?id=61570703487102"
+                            target="_blank"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square me-1" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square me-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h5 class="text-light mb-4" style="text-align: center;">العنوان</h5>
-                <p> 71ش الحجاز - ميدان المحكمة <i class="fa fa-map-marker-alt me-3" style="direction: rtl;"></i></p>
-                <p> 01018387941<i class="fa fa-phone-alt me-3" style="direction: rtl;"></i></p>
-                <p><a class="text-white-50" href="info@spe-egypt.com" target="_blank">info@spe-egypt.com<i
-                            class="fa fa-envelope me-3" style="direction: rtl;"></i></a></p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h5 class="text-light mb-4" style="text-align: center;">
-                    خدماتنا
-                </h5>
-                <a class="btn btn-link" href=""> من نحن </a>
-                <a class="btn btn-link" href=""> التبرعات</a>
-                <a class="btn btn-link" href=""> المساعدات</a>
-                <a class="btn btn-link" href=""> تواصل معنا </a>
-                <a class="btn btn-link" href=""> الحفلات والندوات</a>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h5 class="text-light mb-4" style="text-align: center;">اهم الاخبار</h5>
-                <p>
-                    مشروع انشاء مجمعات صناعة تشمل العديد من المجالات الحرفية من أخشاب ، وتشكيل معادن ، وملابس ... لفتح
-                    فرص عمل للشباب .
-                </p>
-                <div class="position-relative mx-auto" style="max-width: 400px;">
-                    <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
-                        placeholder="البريد الالكترونى">
-                    <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">تواصل
-                        معنا</button>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-light mb-4" style="text-align: center;">العنوان</h5>
+                    <p> 71ش الحجاز - ميدان المحكمة <i class="fa fa-map-marker-alt me-3" style="direction: rtl;"></i></p>
+                    <p> 01018387941<i class="fa fa-phone-alt me-3" style="direction: rtl;"></i></p>
+                    <p><a class="text-white-50" href="info@spe-egypt.com" target="_blank">info@spe-egypt.com<i
+                                class="fa fa-envelope me-3" style="direction: rtl;"></i></a></p>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-light mb-4" style="text-align: center;">
+                        خدماتنا
+                    </h5>
+                    <a class="btn btn-link" href=""> من نحن </a>
+                    <a class="btn btn-link" href=""> التبرعات</a>
+                    <a class="btn btn-link" href=""> المساعدات</a>
+                    <a class="btn btn-link" href=""> تواصل معنا </a>
+                    <a class="btn btn-link" href=""> الحفلات والندوات</a>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <h5 class="text-light mb-4" style="text-align: center;">اهم الاخبار</h5>
+                    <p>
+                        مشروع انشاء مجمعات صناعة تشمل العديد من المجالات الحرفية من أخشاب ، وتشكيل معادن ، وملابس ...
+                        لفتح
+                        فرص عمل للشباب .
+                    </p>
+                    <div class="position-relative mx-auto" style="max-width: 400px;">
+                        <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text"
+                            placeholder="البريد الالكترونى">
+                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">تواصل
+                            معنا</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container-fluid copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a href="#">جمعية مهندسى البترول والتعدين والغاز</a>, كل الحقوق محفوظة.
-                </div>
-                <!--  <div class="col-md-6 text-center text-md-end">
+        <div class="container-fluid copyright">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                        &copy; <a href="#">جمعية مهندسى البترول والتعدين والغاز</a>, كل الحقوق محفوظة.
+                    </div>
+                    <!--  <div class="col-md-6 text-center text-md-end">
                                 Designed By <a href="#"></a>
                             </div> -->
+                </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Footer End -->
+    <!-- Footer End -->
 
-<!-- Back to Top -->
-<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
-<!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="lib/wow/wow.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/owlcarousel/owl.carousel.min.js"></script>
-<script src="lib/parallax/parallax.min.js"></script>
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/parallax/parallax.min.js"></script>
 
-<!-- Template Javascript -->
-<script src="js/main.js"></script>
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 
 </body>
 
