--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>جمعية مهندسى البترول والتعدين والغاز</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="جمعية مهندسى البترول والتعدين والغاز" name="keywords">
+    <meta content="تنمية المجتمعات المحلية , مشروع مدينة الخير , مجمع طبى متكامل للمواطنين محدوده الدخل , التبرعات , الجمعيات الخيرية" name="description">
 
     <!-- Favicon -->
     <link href="img/images/logo/logo-icon.png" rel="icon">
@@ -909,42 +909,42 @@
     <!-- Team End -->
 
 
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5" style="direction: ltr;">
+    <!-- sponsor Start -->
+    <!-- <div class="container-xxl py-5" style="direction: ltr;">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">شركاء النجاح</div>
-                <!--<h1 class="display-6 mb-5">Trusted By Thousands Of People And Nonprofits</h1>-->
+                <h1 class="display-6 mb-5"></h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item text-center">
                     <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/images/logo/logo-icon.png" style="width: 100px; height: 100px;">
-                    <!-- <div class="testimonial-text rounded text-center p-4">
+                     <div class="testimonial-text rounded text-center p-4">
                         <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
                         <h5 class="mb-1">Doner Name</h5>
                         <span class="fst-italic">Profession</span>
-                    </div> -->
+                    </div> 
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/images/partners/download.jpg" style="width: 100px; height: 100px;">
-                   <!--  <div class="testimonial-text rounded text-center p-4">
+                    <div class="testimonial-text rounded text-center p-4">
                         <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
                         <h5 class="mb-1">Doner Name</h5>
                         <span class="fst-italic">Profession</span>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="testimonial-item text-center">
                     <img class="img-fluid bg-light rounded-circle p-2 mx-auto mb-4" src="img/images/partners/images.jpg" style="width: 100px; height: 100px;">
-                    <!-- <div class="testimonial-text rounded text-center p-4">
+                    <div class="testimonial-text rounded text-center p-4">
                         <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
                         <h5 class="mb-1">Doner Name</h5>
                         <span class="fst-italic">Profession</span>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Testimonial End -->
+    </div> -->
+    <!-- sponsor End -->
 
 
     <!-- Footer Start -->
@@ -974,11 +974,11 @@
                     <h5 class="text-light mb-4" style="text-align: center;">
                             خدماتنا
                     </h5>
-                    <a class="btn btn-link" href=""> من نحن </a>
-                    <a class="btn btn-link" href=""> التبرعات</a>
-                    <a class="btn btn-link" href=""> المساعدات</a>
-                    <a class="btn btn-link" href=""> تواصل معنا </a>
-                    <a class="btn btn-link" href=""> الحفلات والندوات</a>
+                    <a class="btn btn-link" href="album.html"> من نحن </a>
+                    <a class="btn btn-link" href="Donate.html"> التبرعات</a>
+                    <a class="btn btn-link" href="Projects.html"> المساعدات</a>
+                    <a class="btn btn-link" href="contact.html"> تواصل معنا </a>
+                    <a class="btn btn-link" href="celebrations.html"> الانشطة</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4" style="text-align: center;">اهم الاخبار</h5>
