--- a/ceo.html
+++ b/ceo.html
@@ -159,8 +159,9 @@
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="section-headline text-center">
-                    <h3>Our experts member</h3>
-                    <p>Help agencies to define their new business objectives and then create professional software.</p>
+                    <h3>الهيكل التنظيمى للسادة المؤسسين و اعضاء المجلس التنفيذى و الاستشارى ورؤساء اللجان التخصصية و النوعية لجمعية مهندسى
+                    البترول والتعدينو الغاز</h3>
+                    <p></p>
                 </div>
             </div>
         </div>
